[Q4] Add swagger doc for health check endpoint.
