# 04-tennis-player/docs/swagger.yaml
@@ -45,6 +45,26 @@ info:
   title: Tennis Player API
   version: "1.0"
 paths:
+  /health:
+    get:
+      description: |-
+        Performs a check on the server's health status.
+        Returns HTTP 200/OK if healthy,
+        returns HTTP 503/Service Unavailable otherwise.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.BaseResponse'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/response.BaseResponse'
+      summary: Health check.
+      tags:
+      - health
   /players/addBall:
     post:
       consumes:
